this is the 3rd commit

--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
     <p>this is my first one</p>
     <h1>thanks for coming out here</h1>
 
+    <p>this is my first one</p>
+    <h1>thanks for coming out here</h1>
+
   </body>
 </html>
